Fixed Cors Error , Integrated F-B